// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AI Conversation Routes Conversations Create a conversation 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "mutation($input: CreateConversationChatBotInput!) { createConversationChatBot(input: $input) { id name metadata createdAt updatedAt owner } }",
      "variables": {
        "input": {
          "metadata": "{"arbitrary":"data"}",
          "name": "Test Conversation",
        },
      },
      Symbol(INTERNAL_USER_AGENT_OVERRIDE): {
        "action": "1",
        "category": "ai",
      },
    },
    {},
  ],
]
`;

exports[`AI Conversation Routes Conversations Get a conversation 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "query($id: ID!) { getConversationChatBot(id: $id) { id name metadata createdAt updatedAt owner } }",
      "variables": {
        "id": "conversation-id",
      },
      Symbol(INTERNAL_USER_AGENT_OVERRIDE): {
        "action": "2",
        "category": "ai",
      },
    },
    {},
  ],
]
`;

exports[`AI Conversation Routes Conversations List conversations 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "query($filter: ModelConversationChatBotFilterInput,$limit: Int,$nextToken: String) { listConversationChatBots(filter: $filter,limit: $limit,nextToken: $nextToken) { items { id name metadata createdAt updatedAt owner } nextToken __typename } }",
      "variables": {},
      Symbol(INTERNAL_USER_AGENT_OVERRIDE): {
        "action": "3",
        "category": "ai",
      },
    },
    {},
  ],
]
`;

exports[`AI Conversation Routes Conversations Paginate conversations 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "query($filter: ModelConversationChatBotFilterInput,$limit: Int,$nextToken: String) { listConversationChatBots(filter: $filter,limit: $limit,nextToken: $nextToken) { items { id name metadata createdAt updatedAt owner } nextToken __typename } }",
      "variables": {
        "limit": 100,
        "nextToken": "previous-next-token",
      },
      Symbol(INTERNAL_USER_AGENT_OVERRIDE): {
        "action": "3",
        "category": "ai",
      },
    },
    {},
  ],
]
`;

exports[`AI Conversation Routes Conversations Update a conversation 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "mutation($input: UpdateConversationChatBotInput!) { updateConversationChatBot(input: $input) { id name metadata createdAt updatedAt owner } }",
      "variables": {
        "input": {
          "id": "conversation-id",
          "metadata": "{"arbitrary":"data"}",
          "name": "updated conversation name",
        },
      },
      Symbol(INTERNAL_USER_AGENT_OVERRIDE): {
        "action": "9",
        "category": "ai",
      },
    },
    {},
  ],
]
`;

exports[`AI Conversation Routes Conversations Update a conversation 2`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "mutation($input: UpdateConversationChatBotInput!) { updateConversationChatBot(input: $input) { id name metadata createdAt updatedAt owner } }",
      "variables": {
        "input": {
          "id": "conversation-id",
          "metadata": "{"arbitrary":"data"}",
          "name": "updated conversation name",
        },
      },
      Symbol(INTERNAL_USER_AGENT_OVERRIDE): {
        "action": "9",
        "category": "ai",
      },
    },
    {},
  ],
]
`;

exports[`AI Conversation Routes Messages List messages 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "query($id: ID!) { getConversationChatBot(id: $id) { id name metadata createdAt updatedAt owner } }",
      "variables": {
        "id": "conversation-id",
      },
      Symbol(INTERNAL_USER_AGENT_OVERRIDE): {
        "action": "2",
        "category": "ai",
      },
    },
    {},
  ],
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "query($filter: ModelConversationMessageChatBotFilterInput,$limit: Int,$nextToken: String) { listConversationMessageChatBots(filter: $filter,limit: $limit,nextToken: $nextToken) { items { id conversationId role content { text document { format name source { bytes } } image { format source { bytes } } toolResult { content { document { format name source { bytes } } image { format source { bytes } } json text } toolUseId status } toolUse { toolUseId name input } } aiContext toolConfiguration { tools { toolSpec { name description inputSchema { json } } } } createdAt updatedAt owner } nextToken __typename } }",
      "variables": {
        "filter": {
          "conversationId": {
            "eq": "conversation-id",
          },
        },
      },
      Symbol(INTERNAL_USER_AGENT_OVERRIDE): {
        "action": "6",
        "category": "ai",
      },
    },
    {},
  ],
]
`;

exports[`AI Conversation Routes Messages Paginate messages 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "query($id: ID!) { getConversationChatBot(id: $id) { id name metadata createdAt updatedAt owner } }",
      "variables": {
        "id": "conversation-id",
      },
      Symbol(INTERNAL_USER_AGENT_OVERRIDE): {
        "action": "2",
        "category": "ai",
      },
    },
    {},
  ],
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "query($filter: ModelConversationMessageChatBotFilterInput,$limit: Int,$nextToken: String) { listConversationMessageChatBots(filter: $filter,limit: $limit,nextToken: $nextToken) { items { id conversationId role content { text document { format name source { bytes } } image { format source { bytes } } toolResult { content { document { format name source { bytes } } image { format source { bytes } } json text } toolUseId status } toolUse { toolUseId name input } } aiContext toolConfiguration { tools { toolSpec { name description inputSchema { json } } } } createdAt updatedAt owner } nextToken __typename } }",
      "variables": {
        "filter": {
          "conversationId": {
            "eq": "conversation-id",
          },
        },
        "limit": 100,
        "nextToken": "previous-next-token",
      },
      Symbol(INTERNAL_USER_AGENT_OVERRIDE): {
        "action": "6",
        "category": "ai",
      },
    },
    {},
  ],
]
`;

exports[`AI Conversation Routes Messages Send a message 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "query($id: ID!) { getConversationChatBot(id: $id) { id name metadata createdAt updatedAt owner } }",
      "variables": {
        "id": "conversation-id",
      },
      Symbol(INTERNAL_USER_AGENT_OVERRIDE): {
        "action": "2",
        "category": "ai",
      },
    },
    {},
  ],
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "
    mutation($conversationId: ID!, $content: [ContentBlockInput], $aiContext: AWSJSON, $toolConfiguration: ToolConfigurationInput) {
      chatBot(conversationId: $conversationId, content: $content, aiContext: $aiContext, toolConfiguration: $toolConfiguration) {id conversationId role content { text document { format name source { bytes } } image { format source { bytes } } toolResult { content { document { format name source { bytes } } image { format source { bytes } } json text } toolUseId status } toolUse { toolUseId name input } } aiContext toolConfiguration { tools { toolSpec { name description inputSchema { json } } } } createdAt updatedAt owner}
    }
  ",
      "variables": {
        "aiContext": "{"arbitrary":"data"}",
        "content": [
          {
            "text": "foo",
          },
        ],
        "conversationId": "conversation-id",
        "toolConfiguration": {
          "tools": [
            {
              "toolSpec": {
                "description": undefined,
                "inputSchema": {
                  "json": "{"type":"object","properties":{"toolUseParam":{"type":"string"}}}",
                },
                "name": "myTool",
              },
            },
          ],
        },
      },
      Symbol(INTERNAL_USER_AGENT_OVERRIDE): {
        "action": "5",
        "category": "ai",
      },
    },
    {},
  ],
]
`;

exports[`AI Conversation Routes Messages Subscribe to messages 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "query($id: ID!) { getConversationChatBot(id: $id) { id name metadata createdAt updatedAt owner } }",
      "variables": {
        "id": "conversation-id",
      },
      Symbol(INTERNAL_USER_AGENT_OVERRIDE): {
        "action": "2",
        "category": "ai",
      },
    },
    {},
  ],
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "
    subscription($conversationId: ID!) {
      onCreateAssistantResponseChatBot(conversationId: $conversationId) {id conversationId role content { text document { format name source { bytes } } image { format source { bytes } } toolResult { content { document { format name source { bytes } } image { format source { bytes } } json text } toolUseId status } toolUse { toolUseId name input } } aiContext toolConfiguration { tools { toolSpec { name description inputSchema { json } } } } createdAt updatedAt owner}
    }
  ",
      "variables": {
        "conversationId": "conversation-id",
      },
      Symbol(INTERNAL_USER_AGENT_OVERRIDE): {
        "action": "7",
        "category": "ai",
      },
    },
    {},
  ],
]
`;

exports[`AI Conversation Routes Messages Subscribe to messages 2`] = `
[
  [
    {
      "authMode": undefined,
      "query": "subscription ($conversationId: ID!) {
  onCreateAssistantResponseChatBot(conversationId: $conversationId) {
    id
    conversationId
    role
    content {
      text
      document {
        format
        name
        source {
          bytes
        }
      }
      image {
        format
        source {
          bytes
        }
      }
      toolResult {
        content {
          document {
            format
            name
            source {
              bytes
            }
          }
          image {
            format
            source {
              bytes
            }
          }
          json
          text
        }
        toolUseId
        status
      }
      toolUse {
        toolUseId
        name
        input
      }
    }
    aiContext
    toolConfiguration {
      tools {
        toolSpec {
          name
          description
          inputSchema {
            json
          }
        }
      }
    }
    createdAt
    updatedAt
    owner
  }
}
",
      "variables": {
        "conversationId": "conversation-id",
      },
    },
    {},
  ],
]
`;
